--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('com.h2database:h2')
     compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+    compile('org.springframework.session:spring-session-jdbc')
+//    testCompile("org.springframework.security:spring-securtiy-test")
+    testCompile('org.springframework.security:spring-security-test')
 }
 
 test {
